# Robust-Data-Driven-Control-for-Nonlinear-Systems-Using-Quadratic-Funnels

./: README.md
robust-ddfunnel/: .gitignore  README.md  pyproject.toml
robust-ddfunnel/configs/: nominal_lqr.yaml  robot_arm_2dof.yaml
robust-ddfunnel/data/nominal_constants/: constants_q1_+4.00_q2_-1.00_N1000.yaml  constants_q1_+4.00_q2_-1.00_N600.yaml
robust-ddfunnel/data/nominal_trajectory/: nominal_q1_+4.00_q2_-1.00_N1000.npz  nominal_q1_+4.00_q2_-1.00_N600.npz
robust-ddfunnel/scripts/: compute_bounds.py  compute_feasible_ellipsoids.py  paper_results.py  plot_Lyapunov.py  plot_funnels.py  run_all.sh  run_nominal.py  run_nominal_on_plant.py  run_online_ddfunnel.py
robust-ddfunnel/src/core/: bounds.py  constants_io.py  data_stack.py  segments.py
robust-ddfunnel/src/dd_sets/: system_set.py  variation_set.py
robust-ddfunnel/src/models/: discretization.py  parameters.py  robot_arm_2dof.py
robust-ddfunnel/src/nominal/: max_elliposoids.py  plant_rollout.py  trajectory.py
robust-ddfunnel/src/synthesis/: feasibility_lmis.py  funnel_utils.py  lmi_blocks.py  recover_gain.py  sdp_problem.py
robust-ddfunnel/src/utils/: config.py
robust-ddfunnel/src/viz/: anim_arm.py  plots.py
